--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U1-W1-D2</title>
+    <title>Sviluppo di una pagina web - Blog Epicode</title>
 </head>
+<main>
+    <img src="./assets/img/logo.svg" alt="Logo-Epicode" width="250">
+    <h1> EPICODE - Il blog dei developers </h1>
+      <ul>
+        <li> <a href="#">MENU</a></li>
+        <li> <a href="#">ARTICOLI</a></li>
+        <li> <a href="#">JOB</a></li>
+      </ul>
+</main> 
+<hr>   
 <body>
-    
+  <h2> Come creare un template per i post </h2>
+  <h5> <b>di Mario Rossi - pubblicato il 25-10-2020 </b></h5> 
+  <section> La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine. </section>
+    <p> Le aree saranno quindi suddivise in:</p>
+      <ul>
+        <li>Contenuti di intestazione del tag &lt; Header &gt; </li>
+        <li>Contenuti centrali variabili del tag &lt; Main &gt; (corpo principale) </li>
+        <li>Contenuti di fine pagina comuni, da inserire nel tag &lt; Footer &gt;</li>
+        <li>Formattazione del codice</li>
+      </ul>
+  <section> Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:
+    <ul>
+      <li> Progettare il markup assegnando ad ogni specifico testo il tag appropriato</li>
+      <li> Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+      <li> Applicare gli stili CSS</li>
+      <li> L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.</li>
+    </ul>
+  </section>
 </body>
+
+<footer>
+
+</footer>
 </html>
