--- a/index.html
+++ b/index.html
@@ -35,9 +35,44 @@
       <li> L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.</li>
     </ul>
   </section>
+  <hr>
+  <table>
+    <thead>Diffusione dei CSS</thead>
+    <tr><td>Anno</td><td>% di utilizzo</td><td>Supporto Browsers</td></tr>
+    <tr><td>2000</td><td>20%</td><td>17%</td></tr>
+    <tr><td>2002</td><td>35%</td><td>22%</td></tr>
+    <tr><td>2004</td><td>45%</td><td>42%</td></tr>
+    <tr><td>2008</td><td>80%</td><td>51%</td></tr>
+    <tr><td>2012</td><td>100%</td><td>76%</td></tr>
+    </table>
+  <p> Un test di validazione potrà essere fatto tramite il <a href="https://www.html.it/pag/16055/tabella-struttura-di-base/" target="_blank"> tool online</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro: </p>
+    <iframe width="727" height="409" src="https://www.youtube.com/embed/AV5qRtBEtGQ" title="Chi sono i web developer? Le risposte alle 5 domande che tutti vogliono sapere sui programmatori web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1> Novità </h1>
+    <p> Vuoi rimanere aggiornato su altre novità blog? Iscriviti alla nostra newsletter </p>
+  <form>
+    <input type="text" placeholder="Inserisci la tua email">
+    <button type="submit">INVIO</button> 
+  </form>
+  <h1>Articoli correlati</h1>
+  <p>
+     <a href="#"> Validare il codice HTML</a> <br>
+      Categoria: develop <br>
+      Data: 18-9-2020
+  </p>
+  <p>
+    <a href="#"> Correggere la sintassi</a> <br>
+     Categoria: develop <br>
+     Data: 16-9-2020
+  </p>
+  <p>
+  <a href="#"> Meno KB nella pagina</a> <br>
+   Categoria: develop <br>
+   Data: 30-9-2020
+  </p>
 </body>
-
+<hr>
 <footer>
-
+  <h4> Blog Epicode &copy; 2021 </h4>
+  <h4> Testata online di Mario Rossi, registrata con prot. n213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233 <br> <a href="mailto:info@epicode.school">info@epicode.school</a> </h4>  
 </footer>
 </html>
